--- a/AdventOfCode.ipynb
+++ b/AdventOfCode.ipynb
@@ -4,14 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Day 2"
+    "# Advent of Code 2021"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 2"
+    "## Day 2 Part 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2"
    ]
   },
   {
@@ -49,16 +56,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "# Day 3"
+    "## Day 3"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 1"
+    "### Part 1"
    ]
   },
   {
@@ -101,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 2"
+    "### Part 2"
    ]
   },
   {
@@ -170,14 +179,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Day 4"
+    "## Day 4"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 1"
+    "### Part 1"
    ]
   },
   {
@@ -245,7 +254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 2"
+    "### Part 2"
    ]
   },
   {
@@ -286,6 +295,131 @@
     "    win_board = win_board[-1]\n",
     "    win_board[win_board == -1] = 0\n",
     "    print(np.sum(win_board) * win_num) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Part 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def GetNumRange(num_a, num_b):\n",
+    "    diff = num_b - num_a\n",
+    "    step = (diff>0) - (diff<0)\n",
+    "    return [i for i in range(num_a, num_b + 1*step, step)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Point():\n",
+    "    def __init__(self, x, y):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return str((self.x, self.y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6283\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"inputs/input5.txt\") as f:\n",
+    "    visited_points = []\n",
+    "    \n",
+    "    for line in f:\n",
+    "        raw_coords = [x.split(\",\") for x in line.strip().replace(\" \", \"\").split(\"->\")]\n",
+    "        clean_coords = [Point(int(x[0]), int(x[1])) for x in raw_coords]\n",
+    "        \n",
+    "        if clean_coords[0].x == clean_coords[1].x:\n",
+    "            y_list = GetNumRange(clean_coords[0].y, clean_coords[1].y)\n",
+    "            x_list = [clean_coords[0].x] * len(y_list)\n",
+    "        elif clean_coords[0].y == clean_coords[1].y:\n",
+    "            x_list = GetNumRange(clean_coords[0].x, clean_coords[1].x)\n",
+    "            y_list = [clean_coords[0].y] * len(x_list)\n",
+    "        else:\n",
+    "            continue\n",
+    "        \n",
+    "        point_list = list(zip(x_list, y_list))\n",
+    "        for point in point_list:\n",
+    "            visited_points.append(str(point))\n",
+    "            \n",
+    "print(len([x for x in np.unique(visited_points, return_counts=True)[1] if x >=2]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18864\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"inputs/input5.txt\") as f:\n",
+    "    visited_points = []\n",
+    "    \n",
+    "    for line in f:\n",
+    "        raw_coords = [x.split(\",\") for x in line.strip().replace(\" \", \"\").split(\"->\")]\n",
+    "        clean_coords = [Point(int(x[0]), int(x[1])) for x in raw_coords]\n",
+    "        \n",
+    "        if clean_coords[0].x == clean_coords[1].x:\n",
+    "            y_list = GetNumRange(clean_coords[0].y, clean_coords[1].y)\n",
+    "            x_list = [clean_coords[0].x] * len(y_list)\n",
+    "        elif clean_coords[0].y == clean_coords[1].y:\n",
+    "            x_list = GetNumRange(clean_coords[0].x, clean_coords[1].x)\n",
+    "            y_list = [clean_coords[0].y] * len(x_list)\n",
+    "        else:\n",
+    "            x_list = GetNumRange(clean_coords[0].x, clean_coords[1].x)\n",
+    "            y_list = GetNumRange(clean_coords[0].y, clean_coords[1].y)\n",
+    "        \n",
+    "        point_list = list(zip(x_list, y_list))\n",
+    "        for point in point_list:\n",
+    "            visited_points.append(str(point))\n",
+    "            \n",
+    "print(len([x for x in np.unique(visited_points, return_counts=True)[1] if x >=2]))"
    ]
   },
   {
