--- a/AdventOfCode.ipynb
+++ b/AdventOfCode.ipynb
@@ -423,6 +423,105 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Day 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ShiftDictVals(old_dict):\n",
+    "    new_dict = {k : 0 for k in range(9)}\n",
+    "    for i in range(8):\n",
+    "        new_dict[i] = old_dict[i+1]\n",
+    "        \n",
+    "    return new_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "375482\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"inputs/input6.txt\") as f:\n",
+    "    fish_list = [int(x) for x in f.readline().split(\",\")]\n",
+    "    fish_dict = {k : 0 for k in range(9)}\n",
+    "    for fish in fish_list:\n",
+    "        fish_dict[fish] += 1\n",
+    "        \n",
+    "\n",
+    "for i in range(80):\n",
+    "    new_fish_dict = ShiftDictVals(fish_dict)\n",
+    "    new_fish_dict[8] = fish_dict[0]\n",
+    "    new_fish_dict[6] += fish_dict[0]\n",
+    "    \n",
+    "    fish_dict = new_fish_dict\n",
+    "\n",
+    "print(sum(fish_dict.values()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1689540415957\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"inputs/input6.txt\") as f:\n",
+    "    fish_list = [int(x) for x in f.readline().split(\",\")]\n",
+    "    fish_dict = {k : 0 for k in range(9)}\n",
+    "    for fish in fish_list:\n",
+    "        fish_dict[fish] += 1\n",
+    "        \n",
+    "\n",
+    "for i in range(256):\n",
+    "    new_fish_dict = ShiftDictVals(fish_dict)\n",
+    "    new_fish_dict[8] = fish_dict[0]\n",
+    "    new_fish_dict[6] += fish_dict[0]\n",
+    "    \n",
+    "    fish_dict = new_fish_dict\n",
+    "\n",
+    "print(sum(fish_dict.values()))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
