--- a/AdventOfCode.ipynb
+++ b/AdventOfCode.ipynb
@@ -522,6 +522,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "356922.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"inputs/input7.txt\") as f:\n",
+    "    pos_list = [int(x) for x in f.readline().split(\",\")]\n",
+    "    pos = np.median(pos_list)    \n",
+    "    print(sum([abs(x - pos) for x in pos_list]))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
