--- a/AdventOfCode.ipynb
+++ b/AdventOfCode.ipynb
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -556,11 +556,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def FuelCost(ideal_pos, curr_pos):\n",
+    "    return sum([x for x in range(1, abs(ideal_pos - curr_pos) + 1)])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open(\"inputs/input7.txt\") as f:\n",
+    "    pos_list = [int(x) for x in f.readline().split(\",\")]\n",
+    "    min_dist = sum([FuelCost(0, pos) for pos in pos_list])\n",
+    "    min_pos = 0\n",
+    "    for x in range(min(pos_list), max(pos_list)):\n",
+    "        dist = sum([FuelCost(x, pos) for pos in pos_list])\n",
+    "        if dist < min_dist:\n",
+    "            min_dist = dist\n",
+    "            min_pos = x\n",
+    "    \n",
+    "    ideal_pos = min_pos\n",
+    "\n",
+    "print(ideal_pos)\n",
+    "\n",
+    "print(sum([FuelCost(ideal_pos, x) for x in pos_list]))"
+   ]
   }
  ],
  "metadata": {
