--- a/AdventOfCode.ipynb
+++ b/AdventOfCode.ipynb
@@ -564,19 +564,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def FuelCost(ideal_pos, curr_pos):\n",
-    "    return sum([x for x in range(1, abs(ideal_pos - curr_pos) + 1)])"
+    "    num = abs(ideal_pos - curr_pos)\n",
+    "    return (num + 1) * num / 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100347031.0\n"
+     ]
+    }
+   ],
    "source": [
     "with open(\"inputs/input7.txt\") as f:\n",
     "    pos_list = [int(x) for x in f.readline().split(\",\")]\n",
@@ -590,10 +599,15 @@
     "    \n",
     "    ideal_pos = min_pos\n",
     "\n",
-    "print(ideal_pos)\n",
-    "\n",
     "print(sum([FuelCost(ideal_pos, x) for x in pos_list]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
