finished day 8, p2 is ugly af

--- a/AdventOfCode.ipynb
+++ b/AdventOfCode.ipynb
@@ -603,6 +603,141 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "383\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"inputs/input8.txt\") as f:\n",
+    "    total = 0\n",
+    "    for line in f:\n",
+    "        input_list, output_list = line.strip().split(\"|\")\n",
+    "        input_list = input_list.split(\" \")\n",
+    "        output_list = output_list.split(\" \")\n",
+    "        #print(\"O\", output_list)\n",
+    "        unique_vals = [x for x in output_list if len(x) in [2, 4, 3, 7]]\n",
+    "        #print(unique_vals)\n",
+    "        total += len(unique_vals)\n",
+    "        \n",
+    "print(total)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def GetEncodeDict(input_list):\n",
+    "    encode_dict = {k : \"\" for k in range(0, 10)}\n",
+    "    real_dict = {k : -1 for k in input_list}\n",
+    "    \n",
+    "    for input_code in input_list:\n",
+    "        if len(input_code) == 2:\n",
+    "            num = 1\n",
+    "        elif len(input_code) == 3:\n",
+    "            num = 7\n",
+    "        elif len(input_code) == 4:\n",
+    "            num = 4\n",
+    "        elif len(input_code) == 7:\n",
+    "            num = 8\n",
+    "        else:\n",
+    "            continue\n",
+    "            \n",
+    "        encode_dict[num] = input_code\n",
+    "        real_dict[\"\".join(sorted(input_code))] = num\n",
+    "        \n",
+    "    for input_code in input_list:\n",
+    "        if len(input_code) == 5:\n",
+    "            if len(set(input_code).intersection(encode_dict[7])) == 3:\n",
+    "                num = 3\n",
+    "            elif len(set(input_code).intersection(encode_dict[4])) == 3:\n",
+    "                num = 5\n",
+    "            else:\n",
+    "                num = 2\n",
+    "        elif len(input_code) == 6:\n",
+    "            if len(set(input_code).intersection(encode_dict[1])) == 1:\n",
+    "                num = 6\n",
+    "            elif len(set(input_code).intersection(encode_dict[7])) == 3 and len(set(input_code).intersection(encode_dict[4])) == 3:\n",
+    "                num = 0\n",
+    "            else:\n",
+    "                num = 9      \n",
+    "        else:\n",
+    "            continue\n",
+    "                \n",
+    "        encode_dict[num] = input_code\n",
+    "        real_dict[\"\".join(sorted(input_code))] = num\n",
+    "            \n",
+    "    return real_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "998900\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"inputs/input8.txt\") as f:\n",
+    "    total = 0\n",
+    "    for line in f:\n",
+    "        input_list, output_list = line.strip().split(\"|\")\n",
+    "        input_list = input_list.split(\" \")\n",
+    "        output_list = output_list.split(\" \")\n",
+    "        encode_dict = GetEncodeDict(input_list)\n",
+    "        \n",
+    "        total+= int(\"\".join([str(encode_dict[\"\".join(sorted(x))]) for x in output_list if x != \"\"]))\n",
+    "        \n",
+    "        \n",
+    "print(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
