did day 9 p1 and p2

--- a/AdventOfCode.ipynb
+++ b/AdventOfCode.ipynb
@@ -731,11 +731,148 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 9"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 1"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def GetNeighborDepth(i, j, matrix):\n",
+    "    neighbors_to_check = [ (i+1, j), (i-1, j), (i, j-1), (i, j+1)]\n",
+    "    neighbor_pos =  list(filter(lambda x: 0 <= x[0] < len(matrix) and 0 <= x[1] < len(matrix[0]), neighbors_to_check))\n",
+    "    return [matrix[x][y] for x,y in neighbor_pos]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "423\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"inputs/input9.txt\") as f:\n",
+    "    matrix = []\n",
+    "    total = 0\n",
+    "    for line in f:\n",
+    "        matrix.append([int(x) for x in list(line.strip())])\n",
+    "        \n",
+    "    for i in range(len(matrix)):\n",
+    "        for j in range(len(matrix[0])):\n",
+    "            min_neighbor = min(GetNeighborDepth(i, j, matrix))\n",
+    "            if matrix[i][j] < min_neighbor:\n",
+    "                total += (matrix[i][j] + 1)\n",
+    "            \n",
+    "print(total)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def GetNeighborPos(i, j, matrix):\n",
+    "    neighbors_to_check = [ (i+1, j), (i-1, j), (i, j-1), (i, j+1)]\n",
+    "    neighbor_pos =  list(filter(lambda x: 0 <= x[0] < len(matrix) and 0 <= x[1] < len(matrix[0]), neighbors_to_check))\n",
+    "    return [ (x, y) for x, y in neighbor_pos if matrix[x][y] >= matrix[i][j] and matrix[x][y] != 9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def GetBasinSize(min_site, matrix):\n",
+    "    sites_to_visit = [min_site]\n",
+    "    visited = []\n",
+    "    while len(sites_to_visit) > 0:\n",
+    "        if sites_to_visit[0] in visited:\n",
+    "            sites_to_visit.pop(0)\n",
+    "            continue\n",
+    "        i, j = sites_to_visit[0]\n",
+    "        sites_to_visit += GetNeighborPos(i, j, matrix)\n",
+    "        visited.append(sites_to_visit.pop(0))\n",
+    "        \n",
+    "    return len(set(visited))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1198704\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"inputs/input9.txt\") as f:\n",
+    "    matrix = []\n",
+    "    visit_matrix = []\n",
+    "    min_sites = []\n",
+    "    for line in f:\n",
+    "        row = [int(x) for x in list(line.strip())]\n",
+    "        matrix.append(row)\n",
+    "        visit_matrix.append([0] * len(row))\n",
+    "        \n",
+    "    for i in range(len(matrix)):\n",
+    "        for j in range(len(matrix[0])):\n",
+    "            min_neighbor = min(GetNeighborDepth(i, j, matrix))\n",
+    "            if matrix[i][j] < min_neighbor:\n",
+    "                min_sites.append((i, j))\n",
+    "    \n",
+    "    \n",
+    "    top_basins = sorted([GetBasinSize(site, matrix) for site in min_sites])[-3:]\n",
+    "print(top_basins[0] * top_basins[1] * top_basins[2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 1"
+   ]
   },
   {
    "cell_type": "code",
