finished day 10 p1, started on p2 but got tired haha

--- a/AdventOfCode.ipynb
+++ b/AdventOfCode.ipynb
@@ -876,10 +876,81 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "323613\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"inputs/inputday10.txt\") as f:\n",
+    "    stack = []\n",
+    "    error_sum = 0\n",
+    "    open_chars = \"[{(<\"\n",
+    "    close_chars = \"]})>\"\n",
+    "    \n",
+    "    error_vals = {    \n",
+    "        ')' : 3,\n",
+    "        ']' : 57,\n",
+    "        '}' : 1197,\n",
+    "        '>' : 25137 }\n",
+    "\n",
+    "    for line in f:\n",
+    "        for char in line.strip():\n",
+    "            if char in open_chars:\n",
+    "                stack.append(char)\n",
+    "            elif char in close_chars:\n",
+    "                if open_chars.index(stack[-1]) == close_chars.index(char):\n",
+    "                    stack.pop(-1)\n",
+    "                else:\n",
+    "                    error_sum += error_vals[char]\n",
+    "                    break\n",
+    "                    \n",
+    "print(error_sum)       "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open(\"inputs/inputday10.txt\") as f:\n",
+    "    stack = []\n",
+    "    error_sum = 0\n",
+    "    open_chars = \"[{(<\"\n",
+    "    close_chars = \"]})>\"\n",
+    "    \n",
+    "    error_vals = {    \n",
+    "        ')' : 3,\n",
+    "        ']' : 57,\n",
+    "        '}' : 1197,\n",
+    "        '>' : 25137 }\n",
+    "    \n",
+    "    incomp_vals = {\n",
+    "        ')': 1,\n",
+    "        ']': 2,\n",
+    "        '}': 3,\n",
+    "        '>': 4 }\n",
+    "\n",
+    "    for line in f:\n",
+    "        for char in line.strip():\n",
+    "            if char in open_chars:\n",
+    "                stack.append(char)\n",
+    "            elif char in close_chars:\n",
+    "                if open_chars.index(stack[-1]) == close_chars.index(char):\n",
+    "                    stack.pop(-1)\n",
+    "                else:\n",
+    "                    error_sum += error_vals[char]\n",
+    "                    break\n",
+    "                    \n",
+    "print(error_sum)       "
+   ]
   }
  ],
  "metadata": {
