--- a/AdventOfCode.ipynb
+++ b/AdventOfCode.ipynb
@@ -916,16 +916,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[({(<(())[]>[[{[]{<()<>>\n",
+      "['[']\n",
+      "['[', '(']\n",
+      "['[', '(', '{']\n",
+      "['[', '(', '{', '(']\n",
+      "['[', '(', '{', '(', '<']\n",
+      "['[', '(', '{', '(', '<', '(']\n",
+      "['[', '(', '{', '(', '<', '(', '(']\n",
+      "['[', '(', '{', '(', '<', '(']\n",
+      "['[', '(', '{', '(', '<']\n",
+      "['[', '(', '{', '(', '<', '[']\n",
+      "['[', '(', '{', '(', '<']\n",
+      "['[', '(', '{', '(']\n",
+      "['[', '(', '{', '(', '[']\n",
+      "['[', '(', '{', '(', '[', '[']\n",
+      "['[', '(', '{', '(', '[', '[', '{']\n",
+      "['[', '(', '{', '(', '[', '[', '{', '[']\n",
+      "['[', '(', '{', '(', '[', '[', '{']\n",
+      "['[', '(', '{', '(', '[', '[', '{', '{']\n",
+      "['[', '(', '{', '(', '[', '[', '{', '{', '<']\n",
+      "['[', '(', '{', '(', '[', '[', '{', '{', '<', '(']\n",
+      "['[', '(', '{', '(', '[', '[', '{', '{', '<']\n",
+      "['[', '(', '{', '(', '[', '[', '{', '{', '<', '<']\n",
+      "['[', '(', '{', '(', '[', '[', '{', '{', '<']\n",
+      "['[', '(', '{', '(', '[', '[', '{', '{']\n",
+      "['[', '(', '{', '(', '[', '[', '{', '{']\n",
+      "[({(<(())[]>[[{[]{<()<>>\n",
+      "}\n",
+      "}\n",
+      "]\n",
+      "]\n",
+      ")\n",
+      "}\n",
+      ")\n",
+      "]\n",
+      "288957\n",
+      "[288957]\n"
+     ]
+    }
+   ],
    "source": [
     "with open(\"inputs/inputday10.txt\") as f:\n",
-    "    stack = []\n",
-    "    error_sum = 0\n",
     "    open_chars = \"[{(<\"\n",
     "    close_chars = \"]})>\"\n",
-    "    \n",
+    "    final_sums = []\n",
     "    error_vals = {    \n",
     "        ')' : 3,\n",
     "        ']' : 57,\n",
@@ -939,6 +981,9 @@
     "        '>': 4 }\n",
     "\n",
     "    for line in f:\n",
+    "        print(line)\n",
+    "        valid = True\n",
+    "        stack = []\n",
     "        for char in line.strip():\n",
     "            if char in open_chars:\n",
     "                stack.append(char)\n",
@@ -946,11 +991,33 @@
     "                if open_chars.index(stack[-1]) == close_chars.index(char):\n",
     "                    stack.pop(-1)\n",
     "                else:\n",
-    "                    error_sum += error_vals[char]\n",
+    "                    valid = False\n",
     "                    break\n",
+    "            print(stack)\n",
+    "        \n",
+    "        if valid:\n",
+    "            close_sum = 0\n",
+    "            print(stack)\n",
+    "            stack.reverse()\n",
+    "            print(line)\n",
+    "            for char in stack:\n",
+    "                close_char = close_chars[open_chars.index(char)]\n",
+    "                print(close_char)\n",
+    "                close_sum *= 5\n",
+    "                close_sum += incomp_vals[close_char]\n",
+    "            \n",
+    "            print(close_sum)\n",
+    "            final_sums.append(close_sum)\n",
     "                    \n",
-    "print(error_sum)       "
+    "print(final_sums)       "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
