--- a/AdventOfCode.ipynb
+++ b/AdventOfCode.ipynb
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {
     "tags": []
    },
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -916,54 +916,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[({(<(())[]>[[{[]{<()<>>\n",
-      "['[']\n",
-      "['[', '(']\n",
-      "['[', '(', '{']\n",
-      "['[', '(', '{', '(']\n",
-      "['[', '(', '{', '(', '<']\n",
-      "['[', '(', '{', '(', '<', '(']\n",
-      "['[', '(', '{', '(', '<', '(', '(']\n",
-      "['[', '(', '{', '(', '<', '(']\n",
-      "['[', '(', '{', '(', '<']\n",
-      "['[', '(', '{', '(', '<', '[']\n",
-      "['[', '(', '{', '(', '<']\n",
-      "['[', '(', '{', '(']\n",
-      "['[', '(', '{', '(', '[']\n",
-      "['[', '(', '{', '(', '[', '[']\n",
-      "['[', '(', '{', '(', '[', '[', '{']\n",
-      "['[', '(', '{', '(', '[', '[', '{', '[']\n",
-      "['[', '(', '{', '(', '[', '[', '{']\n",
-      "['[', '(', '{', '(', '[', '[', '{', '{']\n",
-      "['[', '(', '{', '(', '[', '[', '{', '{', '<']\n",
-      "['[', '(', '{', '(', '[', '[', '{', '{', '<', '(']\n",
-      "['[', '(', '{', '(', '[', '[', '{', '{', '<']\n",
-      "['[', '(', '{', '(', '[', '[', '{', '{', '<', '<']\n",
-      "['[', '(', '{', '(', '[', '[', '{', '{', '<']\n",
-      "['[', '(', '{', '(', '[', '[', '{', '{']\n",
-      "['[', '(', '{', '(', '[', '[', '{', '{']\n",
-      "[({(<(())[]>[[{[]{<()<>>\n",
-      "}\n",
-      "}\n",
-      "]\n",
-      "]\n",
-      ")\n",
-      "}\n",
-      ")\n",
-      "]\n",
-      "288957\n",
-      "[288957]\n"
+      "3103006161.0\n"
      ]
     }
    ],
    "source": [
+    "import numpy as np\n",
     "with open(\"inputs/inputday10.txt\") as f:\n",
     "    open_chars = \"[{(<\"\n",
     "    close_chars = \"]})>\"\n",
@@ -981,7 +946,6 @@
     "        '>': 4 }\n",
     "\n",
     "    for line in f:\n",
-    "        print(line)\n",
     "        valid = True\n",
     "        stack = []\n",
     "        for char in line.strip():\n",
@@ -993,23 +957,267 @@
     "                else:\n",
     "                    valid = False\n",
     "                    break\n",
-    "            print(stack)\n",
     "        \n",
     "        if valid:\n",
     "            close_sum = 0\n",
-    "            print(stack)\n",
     "            stack.reverse()\n",
-    "            print(line)\n",
     "            for char in stack:\n",
     "                close_char = close_chars[open_chars.index(char)]\n",
-    "                print(close_char)\n",
     "                close_sum *= 5\n",
     "                close_sum += incomp_vals[close_char]\n",
     "            \n",
-    "            print(close_sum)\n",
     "            final_sums.append(close_sum)\n",
     "                    \n",
-    "print(final_sums)       "
+    "print(np.median(final_sums))     "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 11"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def PrintMatrix(matrix):\n",
+    "    for line in matrix:\n",
+    "        print(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Point():\n",
+    "    def __init__(self, x, y):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return str((self.x, self.y))\n",
+    "    \n",
+    "    def __eq__(self, other):\n",
+    "        if self.x == other.x and self.y == other.y:\n",
+    "            return True\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def GetFlashList(matrix):\n",
+    "    flash_list = []\n",
+    "    for x, _ in enumerate(matrix):\n",
+    "        for y, y_val in enumerate(matrix[x]):\n",
+    "            if y_val > 9:\n",
+    "                flash_list.append(Point(x, y))\n",
+    "                matrix[x][y] = 0\n",
+    "                \n",
+    "    return flash_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def GetNeighbors(point):\n",
+    "    neighbor_offsets = [(-1, -1), (-1, 0), (-1, 1), (0, -1), (0, 1), (1, -1), (1, 0), (1, 1)]\n",
+    "    neighbors = [Point(point.x + off[0], point.y + off[1]) for off in neighbor_offsets]\n",
+    "    \n",
+    "    return neighbors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def CountFlashes(matrix):\n",
+    "    count = 0\n",
+    "    for x, _ in enumerate(matrix):\n",
+    "        for y, y_val in enumerate(matrix[x]):\n",
+    "            if y_val == 0:\n",
+    "                count += 1\n",
+    "        \n",
+    "        #print(\"COUNT\", count)\n",
+    "                \n",
+    "    return count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1723\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "with open(\"inputs/inputday11.txt\") as f:\n",
+    "    matrix = []\n",
+    "    for line in f:\n",
+    "        matrix.append([int(x) for x in line.strip()])\n",
+    "        \n",
+    "    matrix = np.array(matrix)\n",
+    "    \n",
+    "\n",
+    "total = 0   \n",
+    "for step in range(100):\n",
+    "    matrix += 1\n",
+    "    flash_list = GetFlashList(matrix)\n",
+    "    \n",
+    "    while len(flash_list) != 0:\n",
+    "        neighbor_list = []\n",
+    "        for flash in flash_list:\n",
+    "            neighbor_list += GetNeighbors(flash)\n",
+    "             \n",
+    "        for neighbor in neighbor_list:\n",
+    "            if neighbor.x < 0 or neighbor.x > 9:\n",
+    "                continue\n",
+    "                \n",
+    "            if neighbor.y < 0 or neighbor.y > 9:\n",
+    "                continue\n",
+    "                \n",
+    "            if matrix[neighbor.x][neighbor.y] != 0:\n",
+    "                matrix[neighbor.x][neighbor.y] += 1\n",
+    "            \n",
+    "        flash_list = GetFlashList(matrix)  \n",
+    "    \n",
+    "    total += CountFlashes(matrix)\n",
+    "    \n",
+    "print(total)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "327\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "with open(\"inputs/inputday11.txt\") as f:\n",
+    "    matrix = []\n",
+    "    for line in f:\n",
+    "        matrix.append([int(x) for x in line.strip()])\n",
+    "        \n",
+    "    matrix = np.array(matrix)\n",
+    "    \n",
+    "\n",
+    "total = 0\n",
+    "step = 0\n",
+    "while True:\n",
+    "    matrix += 1\n",
+    "    flash_list = GetFlashList(matrix)\n",
+    "    \n",
+    "    while len(flash_list) != 0:\n",
+    "        neighbor_list = []\n",
+    "        for flash in flash_list:\n",
+    "            neighbor_list += GetNeighbors(flash)\n",
+    "             \n",
+    "        for neighbor in neighbor_list:\n",
+    "            if neighbor.x < 0 or neighbor.x > 9:\n",
+    "                continue\n",
+    "                \n",
+    "            if neighbor.y < 0 or neighbor.y > 9:\n",
+    "                continue\n",
+    "                \n",
+    "            if matrix[neighbor.x][neighbor.y] != 0:\n",
+    "                matrix[neighbor.x][neighbor.y] += 1\n",
+    "            \n",
+    "        flash_list = GetFlashList(matrix)  \n",
+    "    \n",
+    "    step += 1\n",
+    "    if CountFlashes(matrix) == 100:\n",
+    "        print(step)\n",
+    "        break\n",
+    "    \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 12"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'start': ['A', 'b'], 'A': ['start', 'c', 'b', 'end'], 'b': ['start', 'A', 'd', 'end'], 'c': ['A'], 'd': ['b'], 'end': ['A', 'b']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"inputs/example.txt\") as f:\n",
+    "    graph = {}\n",
+    "    for line in f:\n",
+    "        cave_a, cave_b = line.strip().split(\"-\")\n",
+    "        \n",
+    "        if cave_a not in graph.keys():\n",
+    "            graph[cave_a] = []\n",
+    "        if cave_b not in graph.keys():\n",
+    "            graph[cave_b] = []\n",
+    "            \n",
+    "        graph[cave_a].append(cave_b)\n",
+    "        graph[cave_b].append(cave_a)\n",
+    "        \n",
+    "    print(graph)\n",
+    "        "
    ]
   },
   {
