--- a/AdventOfCode2021.ipynb
+++ b/AdventOfCode2021.ipynb
@@ -1191,19 +1191,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'start': ['A', 'b'], 'A': ['start', 'c', 'b', 'end'], 'b': ['start', 'A', 'd', 'end'], 'c': ['A'], 'd': ['b'], 'end': ['A', 'b']}\n"
+      "3679\n"
      ]
     }
    ],
    "source": [
-    "with open(\"inputs/example.txt\") as f:\n",
+    "import functools\n",
+    "from collections import defaultdict\n",
+    "from typing import Set, List, Dict\n",
+    "with open(\"inputs/inputday12.txt\") as f:\n",
     "    graph = {}\n",
     "    for line in f:\n",
     "        cave_a, cave_b = line.strip().split(\"-\")\n",
@@ -1216,8 +1219,67 @@
     "        graph[cave_a].append(cave_b)\n",
     "        graph[cave_b].append(cave_a)\n",
     "        \n",
-    "    print(graph)\n",
-    "        "
+    "\n",
+    "def depthSearch(point, path: List[str], smalls: Set[str], completedPaths: List[List[str]], graph: Dict[str, set[str]]):\n",
+    "    path.extend([point])\n",
+    "    if point == 'end':\n",
+    "        completedPaths.append(path)\n",
+    "        return\n",
+    "\n",
+    "    for neighbor in filter(lambda p: p not in smalls and p != \"start\", graph[point]):\n",
+    "        if neighbor.islower():\n",
+    "            smalls.add(neighbor)\n",
+    "            depthSearch(neighbor, path, smalls, completedPaths, graph)\n",
+    "            smalls.remove(neighbor)\n",
+    "            path.pop()\n",
+    "        else:\n",
+    "            depthSearch(neighbor, path, smalls, completedPaths, graph)\n",
+    "            path.pop()\n",
+    "\n",
+    "\n",
+    "done_paths = []\n",
+    "depthSearch(\"start\", [], set(), done_paths, graph)\n",
+    "print(len(done_paths))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "107395\n"
+     ]
+    }
+   ],
+   "source": [
+    "def depthSearch(point, path: List[str], smalls: Set[str], completedPaths: List[List[str]], graph: Dict[str, set[str]], twiced: bool):\n",
+    "    path.extend([point])\n",
+    "    if point == 'end':\n",
+    "        completedPaths.append(path)\n",
+    "        return\n",
+    "\n",
+    "    for neighbor in filter(lambda p: p != \"start\", graph[point]):\n",
+    "        if neighbor.islower():\n",
+    "            if neighbor in smalls:\n",
+    "                if not twiced:\n",
+    "                    depthSearch(neighbor, path, smalls, completedPaths, graph, True)\n",
+    "            else:\n",
+    "                smalls.add(neighbor)\n",
+    "                depthSearch(neighbor, path, smalls, completedPaths, graph, twiced)\n",
+    "                smalls.remove(neighbor)\n",
+    "                path.pop()\n",
+    "        else:\n",
+    "            depthSearch(neighbor, path, smalls, completedPaths, graph, twiced)\n",
+    "            path.pop()\n",
+    "\n",
+    "\n",
+    "done_paths = []\n",
+    "depthSearch(\"start\", [], set(), done_paths, graph, False)\n",
+    "print(len(done_paths))"
    ]
   },
   {
