--- a/AdventOfCode2022.ipynb
+++ b/AdventOfCode2022.ipynb
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "test = False\n",
-    "filename = \"./input2022/test_day2.txt\" if test else \"./input2022/input_day2.txt\"\n",
+    "filename = \"./input2022/test_day02.txt\" if test else \"./input2022/input_day02.txt\"\n",
     "with open(filename, 'r') as f:\n",
     "    file_input = f.read().split(\"\\n\")"
    ]
@@ -94,11 +94,92 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 3"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test = False\n",
+    "filename = \"./input2022/test_day03.txt\" if test else \"./input2022/input_day03.txt\"\n",
+    "with open(filename, 'r') as f:\n",
+    "    file_input = f.read().split(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def letter_to_score(letter):\n",
+    "    if letter.isupper():\n",
+    "        letter_score = ord(letter) - 64 + 26\n",
+    "    else:\n",
+    "        letter_score = ord(letter) - 96\n",
+    "\n",
+    "    return letter_score\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7889\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_score = 0\n",
+    "for bag_items in file_input:\n",
+    "    half = len(bag_items)//2\n",
+    "    first_comp = set(bag_items[:half])\n",
+    "    second_comp = set(bag_items[half:])\n",
+    "\n",
+    "    same_item = first_comp.intersection(second_comp).pop()\n",
+    "    total_score += letter_to_score(same_item)\n",
+    "\n",
+    "print(total_score)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2825\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_score = 0\n",
+    "\n",
+    "group_bags = [(file_input[i], file_input[i+1], file_input[i+2]) for i in range(0, len(file_input), 3)]\n",
+    "\n",
+    "for bags in group_bags:\n",
+    "    bag1, bag2, bag3 = set(bags[0]), set(bags[1]), set(bags[2])\n",
+    "\n",
+    "    same_item = bag1.intersection(bag2, bag3).pop()\n",
+    "    total_score += letter_to_score(same_item)\n",
+    "\n",
+    "print(total_score)"
+   ]
   },
   {
    "cell_type": "code",
