--- a/AdventOfCode2022.ipynb
+++ b/AdventOfCode2022.ipynb
@@ -11,6 +11,82 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Day 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = False\n",
+    "filename = \"./input2022/test_day01.txt\" if test else \"./input2022/input_day01.txt\"\n",
+    "with open(filename, 'r') as f:\n",
+    "    file_input = f.read().split(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "69501\n"
+     ]
+    }
+   ],
+   "source": [
+    "current_cal = 0\n",
+    "max_cal = 0\n",
+    "for item in file_input:\n",
+    "    if item == \"\":\n",
+    "        if current_cal > max_cal:\n",
+    "            max_cal = current_cal\n",
+    "        current_cal = 0\n",
+    "        continue\n",
+    "    \n",
+    "    current_cal += int(item)\n",
+    "    \n",
+    "print(max_cal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "202346\n"
+     ]
+    }
+   ],
+   "source": [
+    "cal_list = []\n",
+    "for item in file_input:\n",
+    "    if item == \"\":\n",
+    "        cal_list.append(current_cal)\n",
+    "        current_cal = 0\n",
+    "        continue\n",
+    "    \n",
+    "    current_cal += int(item)\n",
+    "\n",
+    "cal_list.append(current_cal)\n",
+    "sorted_cals = sorted(cal_list, reverse=True)\n",
+    "\n",
+    "print(sum(sorted_cals[:3]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Day 2"
    ]
   },
@@ -190,11 +266,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "094fff7337e88b83673f70f4a8f850c2a7f33959844558f902d1434f91754666"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.0 64-bit ('aoc': conda)",
+   "display_name": "Python 3.9.15 ('scratch')",
    "language": "python",
    "name": "python3"
   },
@@ -208,9 +281,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.9.15"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "1762511d11d7a7fd57dfc62cd4ab696ba7ab3f6eeb69d4ea5c582baaa43c8547"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
