--- a/AdventOfCode2022.ipynb
+++ b/AdventOfCode2022.ipynb
@@ -258,6 +258,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = False\n",
+    "filename = \"./input2022/test_day04.txt\" if test else \"./input2022/input_day04.txt\"\n",
+    "with open(filename, 'r') as f:\n",
+    "    file_input = f.read().split(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "513\n"
+     ]
+    }
+   ],
+   "source": [
+    "total = 0\n",
+    "for range_strs in file_input:\n",
+    "    input_1, input_2 = range_strs.split(\",\") \n",
+    "    first_elf = set([x for x in range(int(input_1.split(\"-\")[0]), int(input_1.split(\"-\")[1]) + 1)])\n",
+    "    second_elf = set([x for x in range(int(input_2.split(\"-\")[0]), int(input_2.split(\"-\")[1]) + 1)])\n",
+    "    \n",
+    "    if first_elf.intersection(second_elf) == first_elf or first_elf.intersection(second_elf) == second_elf:\n",
+    "        total += 1\n",
+    "\n",
+    "print(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "878\n"
+     ]
+    }
+   ],
+   "source": [
+    "total = 0\n",
+    "for range_strs in file_input:\n",
+    "    input_1, input_2 = range_strs.split(\",\") \n",
+    "    first_elf = set([x for x in range(int(input_1.split(\"-\")[0]), int(input_1.split(\"-\")[1]) + 1)])\n",
+    "    second_elf = set([x for x in range(int(input_2.split(\"-\")[0]), int(input_2.split(\"-\")[1]) + 1)])\n",
+    "    \n",
+    "    if len(first_elf.intersection(second_elf)) != 0:\n",
+    "        total += 1\n",
+    "\n",
+    "print(total)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
